# current_dir

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  tarpaulin.toml
.github/workflows/: ci.yml  publish.yml
src/: aliases.rs  lib.rs  prelude.rs  scoped.rs  sealed.rs  test_utilities.rs
src/scoped/: stack.rs
tests/: intergration.rs
