[package]
name = "current_dir"
version = "0.1.0"
description = "Thread Safe Current Working Directory"
edition = "2021"
repository = "https://github.com/G-M0N3Y-2503/current_dir"
license-file = "LICENSE"
readme = "README.md"
keywords = ["async", "cwd", "filesystem", "test", "thread"]
categories = ["concurrency", "development-tools::testing", "filesystem"]

[features]
full_expected_cwd = []
unstable = []

[dev-dependencies]
with_drop = "0.0.3"
