[package]
name = "current_dir"
version = "0.1.0"
description = "Thread Safe Current Working Directory"
edition = "2021"
repository = "https://github.com/G-M0N3Y-2503/current_dir"
license-file = "LICENSE"
license = "MIT"
readme = "README.md"
keywords = ["async", "cwd", "filesystem", "test", "thread"]
categories = ["concurrency", "development-tools::testing", "filesystem"]
rust-version = "1.81"

[features]
full_expected_cwd = []
unstable = []

[dev-dependencies]
with_drop = "0.0.3"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"                       # idiomatic
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"

[lints.rustdoc]
all = "warn"
